tests/errors/sem.index-overflow.item-access.or
main :: () -> void {
    arr :: [2]sint.{1, 2};
    arr[4];
};
